# bfuk

./: .gitignore  CMakeLists.txt  Makefile  README.md
bfuk/: CMakeLists.txt
libbfuk/: CMakeLists.txt  term.cpp
src/: interpreter-imp.cpp  interpreter.cpp  interpreter.hpp  main.cpp  term-imp.cpp  term.cpp  term.hpp  tests.cpp
tests/: CMakeLists.txt
